@@ -953,6 +953,16 @@ operator|.
 name|Token
 name|t
 decl_stmt|;
+name|int
+name|positionCount
+init|=
+literal|0
+decl_stmt|;
+name|boolean
+name|severalTokensAtSamePosition
+init|=
+literal|false
+decl_stmt|;
 while|while
 condition|(
 literal|true
@@ -991,10 +1001,24 @@ operator|.
 name|addElement
 argument_list|(
 name|t
-operator|.
-name|termText
-argument_list|()
 argument_list|)
+expr_stmt|;
+if|if
+condition|(
+name|t
+operator|.
+name|getPositionIncrement
+argument_list|()
+operator|==
+literal|1
+condition|)
+name|positionCount
+operator|++
+expr_stmt|;
+else|else
+name|severalTokensAtSamePosition
+operator|=
+literal|true
 expr_stmt|;
 block|}
 try|try
@@ -1035,6 +1059,27 @@ argument_list|()
 operator|==
 literal|1
 condition|)
+block|{
+name|t
+operator|=
+operator|(
+name|org
+operator|.
+name|apache
+operator|.
+name|lucene
+operator|.
+name|analysis
+operator|.
+name|Token
+operator|)
+name|v
+operator|.
+name|elementAt
+argument_list|(
+literal|0
+argument_list|)
+expr_stmt|;
 return|return
 operator|new
 name|TermQuery
@@ -1044,18 +1089,250 @@ name|Term
 argument_list|(
 name|field
 argument_list|,
+name|t
+operator|.
+name|termText
+argument_list|()
+argument_list|)
+argument_list|)
+return|;
+block|}
+else|else
+block|{
+if|if
+condition|(
+name|severalTokensAtSamePosition
+condition|)
+block|{
+if|if
+condition|(
+name|positionCount
+operator|==
+literal|1
+condition|)
+block|{
+comment|// no phrase query:
+name|BooleanQuery
+name|q
+init|=
+operator|new
+name|BooleanQuery
+argument_list|()
+decl_stmt|;
+for|for
+control|(
+name|int
+name|i
+init|=
+literal|0
+init|;
+name|i
+operator|<
+name|v
+operator|.
+name|size
+argument_list|()
+condition|;
+name|i
+operator|++
+control|)
+block|{
+name|t
+operator|=
 operator|(
-name|String
+name|org
+operator|.
+name|apache
+operator|.
+name|lucene
+operator|.
+name|analysis
+operator|.
+name|Token
 operator|)
 name|v
 operator|.
 name|elementAt
 argument_list|(
-literal|0
+name|i
+argument_list|)
+expr_stmt|;
+name|TermQuery
+name|currentQuery
+init|=
+operator|new
+name|TermQuery
+argument_list|(
+operator|new
+name|Term
+argument_list|(
+name|field
+argument_list|,
+name|t
+operator|.
+name|termText
+argument_list|()
 argument_list|)
 argument_list|)
+decl_stmt|;
+name|q
+operator|.
+name|add
+argument_list|(
+name|currentQuery
+argument_list|,
+name|BooleanClause
+operator|.
+name|Occur
+operator|.
+name|SHOULD
 argument_list|)
+expr_stmt|;
+block|}
+return|return
+name|q
 return|;
+block|}
+else|else
+block|{
+comment|// phrase query:
+name|MultiPhraseQuery
+name|mpq
+init|=
+operator|new
+name|MultiPhraseQuery
+argument_list|()
+decl_stmt|;
+name|List
+name|multiTerms
+init|=
+operator|new
+name|ArrayList
+argument_list|()
+decl_stmt|;
+for|for
+control|(
+name|int
+name|i
+init|=
+literal|0
+init|;
+name|i
+operator|<
+name|v
+operator|.
+name|size
+argument_list|()
+condition|;
+name|i
+operator|++
+control|)
+block|{
+name|t
+operator|=
+operator|(
+name|org
+operator|.
+name|apache
+operator|.
+name|lucene
+operator|.
+name|analysis
+operator|.
+name|Token
+operator|)
+name|v
+operator|.
+name|elementAt
+argument_list|(
+name|i
+argument_list|)
+expr_stmt|;
+if|if
+condition|(
+name|t
+operator|.
+name|getPositionIncrement
+argument_list|()
+operator|==
+literal|1
+operator|&&
+name|multiTerms
+operator|.
+name|size
+argument_list|()
+operator|>
+literal|0
+condition|)
+block|{
+name|mpq
+operator|.
+name|add
+argument_list|(
+operator|(
+name|Term
+index|[]
+operator|)
+name|multiTerms
+operator|.
+name|toArray
+argument_list|(
+operator|new
+name|Term
+index|[
+literal|0
+index|]
+argument_list|)
+argument_list|)
+expr_stmt|;
+name|multiTerms
+operator|.
+name|clear
+argument_list|()
+expr_stmt|;
+block|}
+name|multiTerms
+operator|.
+name|add
+argument_list|(
+operator|new
+name|Term
+argument_list|(
+name|field
+argument_list|,
+name|t
+operator|.
+name|termText
+argument_list|()
+argument_list|)
+argument_list|)
+expr_stmt|;
+block|}
+name|mpq
+operator|.
+name|add
+argument_list|(
+operator|(
+name|Term
+index|[]
+operator|)
+name|multiTerms
+operator|.
+name|toArray
+argument_list|(
+operator|new
+name|Term
+index|[
+literal|0
+index|]
+argument_list|)
+argument_list|)
+expr_stmt|;
+return|return
+name|mpq
+return|;
+block|}
+block|}
 else|else
 block|{
 name|PhraseQuery
@@ -1100,7 +1377,16 @@ argument_list|(
 name|field
 argument_list|,
 operator|(
-name|String
+operator|(
+name|org
+operator|.
+name|apache
+operator|.
+name|lucene
+operator|.
+name|analysis
+operator|.
+name|Token
 operator|)
 name|v
 operator|.
@@ -1108,6 +1394,10 @@ name|elementAt
 argument_list|(
 name|i
 argument_list|)
+operator|)
+operator|.
+name|termText
+argument_list|()
 argument_list|)
 argument_list|)
 expr_stmt|;
@@ -1115,6 +1405,7 @@ block|}
 return|return
 name|q
 return|;
+block|}
 block|}
 block|}
 comment|/**    * Note that parameter analyzer is ignored. Calls inside the parser always    * use class member analyzer.    *    * @exception ParseException throw in overridden method to disallow    * @deprecated use {@link #getFieldQuery(String, String, int)}    */
@@ -1187,6 +1478,26 @@ block|{
 operator|(
 operator|(
 name|PhraseQuery
+operator|)
+name|query
+operator|)
+operator|.
+name|setSlop
+argument_list|(
+name|slop
+argument_list|)
+expr_stmt|;
+block|}
+if|if
+condition|(
+name|query
+operator|instanceof
+name|MultiPhraseQuery
+condition|)
+block|{
+operator|(
+operator|(
+name|MultiPhraseQuery
 operator|)
 name|query
 operator|)
